--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.41",
+    "framer-motion": "^12.12.1",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "resend": "^4.5.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
